--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,7 @@ on:
   push:
     branches: [ main ]
 jobs:
-  react:
-    working-directory: packages/@manifoldxyz-react
+  build:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
@@ -26,42 +25,8 @@ jobs:
             yarn install
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
       - name: Lint
-        run: yarn lint
-
-      # - name: Unit Test
-      #   run: yarn test:unit:coverage
-
+        run: yarn workspaces run lint
       - name: Build
-        run: yarn build
-  vue:
-    working-directory: packages/@manifoldxyz-vue
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.pull_request.head.ref }}
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
-      - name: Install dependencies
-        run: |
-            echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
-            yarn install
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      # - name: Lint
-      #   run: yarn lint
-
-      # - name: Unit Test
-      #   run: yarn test:unit:coverage
-
-      # - name: Build
-      #   run: yarn build
-
-
+        run: yarn workspaces run build
+  
