--- a/packages/@manifoldxyz-vue2/package.json
+++ b/packages/@manifoldxyz-vue2/package.json
@@ -1,22 +1,42 @@
 {
   "name": "@manifoldxyz/vue-2",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "license": "MIT",
   "scripts": {
+    "lint": "eslint src --ext .ts,.vue",
     "build": "echo 1",
-    "lint": "echo 1"
+    "symlink-shared": "rimraf ./shared && symlink-dir ../../shared ./src/shared"
   },
   "devDependencies": {
     "@manifoldxyz/lint-configs": "^0.0.15",
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^25.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-vue": "^9.8.0",
     "prettier": "^2.5.1",
-    "vue-eslint-parser": "^8.0.1"
+    "rollup": "^3.7.5",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "rollup-plugin-vue": "^6.0.0",
+    "vue": "^2.0.0",
+    "vue-class-component": "^7.2.6",
+    "vue-eslint-parser": "^8.0.1",
+    "vue-property-decorator": "^9.1.2",
+    "vue-template-compiler": "^2.7.14"
+  },
+  "peerDependencies": {
+    "vue": "^2",
+    "vue-class-component": "*",
+    "vue-property-decorator": "*"
   }
 }
