--- a/packages/@manifoldxyz-react/package.json
+++ b/packages/@manifoldxyz-react/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@manifoldxyz/react",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
     "build": "rimraf ./dist && yarn run symlink-shared && rollup -c --preserveSymlinks",
