--- a/packages/@manifoldxyz-vue/package.json
+++ b/packages/@manifoldxyz-vue/package.json
@@ -34,10 +34,13 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
     "rollup-plugin-vue": "^6.0.0",
-    "vue": "^3.0.0",
+    "vue": "^3.2.36",
     "vue-eslint-parser": "^8.0.1"
   },
   "peerDependencies": {
     "vue": "^3"
+  },
+  "dependencies": {
+    "typescript": "^5.0.4"
   }
 }
